# ChangeLog for app-admin/fam-oss
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/fam-oss/ChangeLog,v 1.31 2003/11/15 23:25:36 gmsoft Exp $

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> fam-oss-2.6.10-r1.ebuild:
  Stable on ia64

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  fam-oss-2.6.10-r1.ebuild:
  set ppc in keywords

  16 Oct 2003; Aron Griffis <agriffis@gentoo.org> fam-oss-2.6.10-r1.ebuild:
  Stable on alpha

*fam-oss-2.6.10-r1 (30 Jul 2003)

  15 Nov 2003; Guy Martin <gmsoft@gentoo.org> fam-oss-2.6.10-r1.ebuild :
  Added hppa to KEYWORDS.

  30 Jul 2003; Nick Hadaway <raker@gentoo.org> fam-oss-2.6.10-r1.ebuild,
  files/fam-oss-2.6.10-nostatvfs.patch:
  Added a patch to removed the hooks for statvfs which appears to be
  b0rked on Linux.  Even in the source are comments re: it's brokenness.
  Thanks to Danny Milosavljevic on bug #24280 for doing research on 
  this.

  25 Jun 2003; Bartosch Pixa <darkspecter@gentoo.org> fam-oss-2.6.10.ebuild:
  set ppc in keywords

*fam-oss-2.6.10 (09 Jun 2003)

  01 Jul 2003; Guy Martin <gmsoft@gentoo.org> fam-oss-2.6.10.ebuild :
  Added hppa to KEYWORDS.

  09 Jun 2003; Nick Hadaway <raker@gentoo.org> fam-oss-2.6.10.ebuild,
  files/digest-fam-oss-2.6.10, files/fam-oss-2.6.10-largefile.patch:
  Version bump.  No longer needs the gcc3 patch.

*fam-oss-2.6.9-r3 (17 May 2003)

  17 May 2003; Alastair Tse <liquidx@gentoo.org> fam-oss-2.6.9-r3.ebuild,
  files/fam-oss-2.6.9-largefile.patch:
  enabled largefile support (>2G) thanks to Erik Swanson (#20745)

*fam-oss-2.6.9-r2 (22 Feb 2003)

  22 Feb 2003; Martin Schlemmer <azarah@gentoo.org> fam-oss-2.6.9-r2.ebuild :
  Update dnotify patch.  Add cleanup patch from MDK.

*fam-oss-2.6.9-r1 (27 Jan 2003)

  09 Apr 2003; Todd Sunderlin <todd@gentoo.org> fam-oss-2.6.9-r1.ebuild:
  Marked stable for sparc.

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> fam-oss-2.6.9-r1.ebuild :