@@ -1,10 +1,11 @@
-MD5 79d11b134d5ccb0c1e7314db8219e4d6 ChangeLog 4400
-MD5 651400240ba6016bc12343ac6df6d072 fam-oss-2.6.10-r1.ebuild 1389
+MD5 10509b222062c634f70b72a00a565556 fam-oss-2.6.9.ebuild 1161
+MD5 5188b20de35e13db189ebcd40a5fa049 ChangeLog 4495
+MD5 1ada6f77597b82a46b85632af4feb28f fam-oss-2.6.10-r1.ebuild 1583
 MD5 9b89f79070eba6c109876a67255709b4 fam-oss-2.6.10.ebuild 1445
 MD5 082ef73afb3e0a6bd528d924108a71a6 fam-oss-2.6.9-r1.ebuild 1197
 MD5 bd1054a1f534a62471827e966f05de25 fam-oss-2.6.9-r2.ebuild 1383
 MD5 e3eec54470995e8c316f5c595e4d86a0 fam-oss-2.6.9-r3.ebuild 1487
-MD5 10509b222062c634f70b72a00a565556 fam-oss-2.6.9.ebuild 1161
+MD5 179cf9d7c004f510debb9f40bb21c34e files/fam 504
 MD5 0dba17f68005aa92b3903797dcc7c625 files/digest-fam-oss-2.6.10 62
 MD5 0dba17f68005aa92b3903797dcc7c625 files/digest-fam-oss-2.6.10-r1 62
 MD5 0bf8d935c21bfe80427c982dc3d41357 files/digest-fam-oss-2.6.9 118
@@ -13,9 +14,8 @@ MD5 cf2ec68df6ce23777000ce8b78c49df1 files/digest-fam-oss-2.6.9-r2 61
 MD5 cf2ec68df6ce23777000ce8b78c49df1 files/digest-fam-oss-2.6.9-r3 61
 MD5 3f8fee0b9f3239d2c92623af9a2c4844 files/dnotify.patch 28983
 MD5 3cbaa44382dadea506e93bf3a97e35cc files/dnotify.patch.new 29321
-MD5 179cf9d7c004f510debb9f40bb21c34e files/fam 504
-MD5 6d8076ab39e8b5432cf36468abe505b9 files/fam-2.6.7-cleanup.patch 1868
 MD5 28ba151456fe1d493cdbafe08c3c0e5e files/fam-oss-2.6.10-largefile.patch 525
+MD5 6d8076ab39e8b5432cf36468abe505b9 files/fam-2.6.7-cleanup.patch 1868
 MD5 747869c90d342f2f0e375df87a0cd3a6 files/fam-oss-2.6.10-nostatvfs.patch 1813
 MD5 b03797e114f768833ab0291a940e9038 files/fam-oss-2.6.9-gcc3.patch 435
 MD5 28ba151456fe1d493cdbafe08c3c0e5e files/fam-oss-2.6.9-largefile.patch 525
